<resources>
    <string name="app_name_children" translatable="false">Cophat CA</string>
    <string name="app_name_parents" translatable="false">Cophat P</string>
    <string name="cophat_ca" translatable="false">Cophat-CA</string>
    <string name="cophat_p" translatable="false">Cophat-P</string>
    <string name="cophat">Cophat</string>
    <string name="cophat_ca_desc">Escala de Coping da Hospitalização, Adoecimento e Tratamento\n
        Versão para crianças e adolescentes</string>
    <string name="cophat_p_desc">Escala de Coping da Hospitalização, Adoecimento e Tratamento\n
        Versão para pais/responsáveis</string>
    <string name="attention">Atenção</string>
    <string name="unexpected_error">Ops… Ocorreu um erro inesperado.\nTente novamente mais tarde.</string>
    <string name="firebase_error">Ops… Ocorreu um erro ao salvar as informações.</string>
    <string name="ok">OK</string>
    <string name="initiate_questionnaire">Iniciar questionário</string>
    <string name="done_questionnaire">Finalizar questionário</string>
    <string name="continue_questionnaire">Continuar questionário</string>
    <string name="list_questionnaires">Listar questionários</string>
    <string name="configurations">Configurações</string>
    <string name="emotions">Emoções</string>
    <string name="emotions_description">O que cada carinha significa?</string>
    <string name="happy">Feliz</string>
    <string name="sad">Triste</string>
    <string name="angry">Raiva</string>
    <string name="scared">Medo</string>
    <string name="thermometer">Termômetro</string>
    <string name="thermometer_description">O que cada estado significa?</string>
    <string name="always">Sempre</string>
    <string name="often">Quase sempre</string>
    <string name="sometimes">Às vezes</string>
    <string name="almost_never">Quase nunca</string>
    <string name="never">Nunca</string>
    <string name="insert_data_before">Antes de começar, insira os dados abaixo para que seja gerado
        o código da família</string>
    <string name="lets_learn">%1$s, vamos aprender o que significam as imagens?</string>
    <string name="advance">Avançar</string>
    <string name="go_back">Voltar</string>
    <string name="child_name">Qual o nome da criança?</string>
    <string name="child_gender">Qual o sexo da criança?</string>
    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="complete_name">Nome completo</string>
    <string name="choose_hospital">Escolha o hospital:</string>
    <string name="choose_admin">Escolha o aplicador:</string>
    <string name="edit_or_remove_admin">Clique nos ícones para adicionar, editar ou remover
        qualquer aplicador no banco de dados da aplicação</string>
    <string name="edit">Editar</string>
    <string name="remove">Remover</string>
    <string name="add">Adicionar</string>
    <string name="add_admin">Adicionar aplicador</string>
    <string name="edit_admin">Editar aplicador</string>
    <string name="add_desc_admin">Insira abaixo o nome e o e-mail do aplicador que deseja cadastrar</string>
    <string name="edit_desc_admin">Altere abaixo o nome ou o e-mail do aplicador selecionado</string>
    <string name="email">E-mail</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Salvar</string>
    <string name="success_register">Cadastro realizado com sucesso!</string>
    <string name="success_update">Ataulização realizada com sucesso!</string>
    <string name="confirm">Confirmar</string>
    <string name="are_you_sure">Tem certeza que deseja prosseguir?\nEsta ação não poderá ser desfeita.</string>
    <string name="success_remove">Remoção realizada com sucesso!</string>
    <string name="id_form">Ficha de Identificação</string>
    <string name="patient_parents">Primeiramente, me conte um pouco sobre os pais</string>
    <string name="mother_profession">Qual a profissão da mãe?</string>
    <string name="father_profession">Qual a profissão do pai?</string>
    <string name="marital_status">Qual o estado civil dos pais?</string>
    <string name="married">Casado</string>
    <string name="amassed">Amasiado</string>
    <string name="divorced">Divorciado/Separado</string>
    <string name="single">Solteiro</string>
    <string name="widower">Viúvo</string>
    <string name="family_religion">Qual a religião da família?</string>
    <string name="catholic">Católica</string>
    <string name="evangelical">Evangélica</string>
    <string name="spiritist">Espírita</string>
    <string name="other">Outra</string>
    <string name="other_religion">Outra religião</string>
    <string name="none">Nenhuma</string>
    <string name="male_treatment">" do "</string>
    <string name="female_treatment">" da "</string>
    <string name="confirm_patient">Agora, confirme algumas informações</string>
    <string name="patient_name">Nome do paciente</string>
    <string name="medical_records">Prontuário</string>
    <string name="birth_patient">Nascimento</string>
    <string name="age_patient">Idade</string>
    <string name="gender_patient">Sexo</string>
    <string name="about_internal">Sobre a internação</string>
    <string name="diagnosis">Diagnóstico</string>
    <string name="diagnosis_time">Tempo de diagnóstico</string>
    <string name="days_hospitalized">Dias internado</string>
    <string name="hospitalizations">Internações</string>
    <string name="finalize_register">Para finalizar o cadastro, insira os últimos dados</string>
    <string name="schooling">Escolaridade</string>
    <string name="pre">Pré</string>
    <string name="first_year">1° ano</string>
    <string name="second_year">2° ano</string>
    <string name="third_year">3° ano</string>
    <string name="fourth_year">4° ano</string>
    <string name="fifth_year">5° ano</string>
    <string name="sixth_year">6° ano</string>
    <string name="seventh_year">7° ano</string>
    <string name="eighth_year">8° ano</string>
    <string name="ninth_year">9° ano</string>
    <string name="school_internal">Frequenta a escola fora da internação?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="resident_here">Residente nesta cidade?</string>
    <string name="address_city_state">Moradia (Bairro / Cidade / Estado)</string>
    <string name="income_family">Renda de todos que contribuem com as despesas</string>
    <string name="education_degree_chief">Qual é o grau de instrução do chefe da família? (Considere
        como chefe da família a pessoa que contribui com a maior parte da renda do domicílio)</string>
    <string name="illiterate">Analfabeto / Fundamental I incompleto</string>
    <string name="complete_fundamental_1">Fundamental I completo / Fundamental II incompleto</string>
    <string name="complete_fundamental_2">Fundamental II completo / Médio incompleto</string>
    <string name="complete_medium">Médio completo / Superior incompleto</string>
    <string name="graduated">Superior completo</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="start">Iniciar</string>
    <string name="describe">Descreva</string>
    <string name="congrats">Parabéns</string>
    <string name="questionnaire_finished">Parabéns! Você respondeu todas as perguntas</string>
    <string name="thanks_parents">Obrigado pelo seu tempo.\nSuas respostas irão ajudar outras famílias a terem um tratamento cada vez melhor!</string>
    <string name="thanks_children">Obrigado pelas respostas.\nSeja forte! E lembre-se, heróis nunca desistem!</string>
    <string name="finish">Questionário concluído</string>
    <string name="export_sheet">Exportar planilha</string>
    <string name="all_questionnaires">Lista de todos os questionários</string>
    <string name="description_questionnaires">Veja as informações detalhadas de cada questionário e gere suas respectivas planilhas</string>
    <string name="not_initialized">Não iniciado</string>
    <string name="incomplete">Incompleto</string>
    <string name="complete">Completo</string>
    <string name="more_days">1d+</string>
    <string name="export_all">Exportar todos os questionários</string>
    <string name="loaded_all">Todos os questionários foram carregados</string>
    <string name="export_data_sheet">Exportar dados para planilha</string>
    <string name="export_path">A planilha será salva na memória interna deste dispositivo no diretório:\nAndroid/data/com.cophat/files/</string>
    <string name="create_sheet">Criar documento</string>
    <string name="turn_on_permission">Permissão necessária para gerar a planilha</string>
    <string name="export_failed">Erro ao salvar arquivo</string>
    <string name="export_success">Arquivo salvo com sucesso!</string>
    <string name="children_adolescents">Questões CA</string>
    <string name="sub_children">Subquestões CA</string>
    <string name="parents_responsible">Questões P</string>
    <string name="sub_parents">Subquestões P</string>
    <string name="comparative">Questões CA x P</string>
    <string name="sub_comparative">Subquestões CA x P</string>
    <string name="questions">QUESTÕES</string>
    <string name="sub_questions">SUBQUESTÕES</string>
    <string name="category">CATEGORIA</string>
    <string name="total">TOTAL</string>
    <string name="removed_application">Aplicação removida com sucesso</string>
</resources>
